# Graph

./: .gitignore  README.md  justfile  profile.html  profile.json  pyproject.toml  scrapy.cfg
graph/: base.py  model.py  utils.py
graph/example/: assignment1.py  assignment3.py
report/script/: report1.py  report1_fix_ba.py  report4.py  report5.py  report6.py
tests/: conftest.py  test_base.py  test_graph.py  test_model.py  test_utils.py
wiki_scraper/: docker.compose.yaml  items.py  middlewares.py  pipelines.py  settings.py
wiki_scraper/spiders/: wiki.py
