[tool.poetry]
name = "graph"
version = "1.0.0"
description = "Graph model for the labs list."
authors = ["ZiveRael <papeernscal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12,<=3.13"
pydantic = "^2.10.6"
numpy = "^2.2.4"
pytest-mock = "^3.14.0"
ipython = "^9.0.2"
jupyterlab = "^4.4.0"
seaborn = "^0.13.2"
ipympl = "^0.9.7"
jupytext = "^1.17.0"
rich = "^14.0.0"
scipy = "^1.15.2"
scrapy = "2.11.1"
scrapy-splash = "^0.11.1"
networkx = "3.4.2"
pyvis = "^0.3.2"
holoviews = "^1.20.2"
datashader = "^0.18.0"
jupyter-bokeh = "^4.0.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.10"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude=["report/notebook"]

[tool.jupytext.formats]
"report/notebook/" = "ipynb"
"report/script" = "py:percent"